--- a/src/main/resources/templates/khk/adminNavbar.html
+++ b/src/main/resources/templates/khk/adminNavbar.html
@@ -353,7 +353,9 @@ select {
 </head>
 <body class="admin_nav_body">
 	<div class="admin_navbar">
-		<a href="/" id="home">경상도숙박장사</a> <a href="/admin/adminNoticeList">공지사항</a>
+		<a href="/" id="home">경상도숙박장사</a> 
+		<a href="/admin/main">어드민 홈</a>
+		<a href="/admin/adminNoticeList">공지사항</a>
 		<a href="/admin/authorityPage">권한 관리</a> <a
 			href="/admin/accomdationListPage">업체 관리</a> <a
 			href="/admin/partnerListPage">파트너 관리</a> <a href="/admin/inquiryList">1:1
