대시보드 수정

--- a/src/main/resources/static/css/admin_dashboard.css
+++ b/src/main/resources/static/css/admin_dashboard.css
@@ -32,7 +32,8 @@
    font-weight: bold;
 }
 #admin_dashboard_main{
-   margin-left:-1300px;
+   margin-left:-1350px;
+   font-weight: bold;
 }
 
 .roles_count_kty{
