--- a/src/main/resources/templates/kty/admin_main.html
+++ b/src/main/resources/templates/kty/admin_main.html
@@ -14,7 +14,7 @@
 <body>
    <html layout:decorate="~{khk/adminNavbar}">
    <div layout:fragment="adminNav" class="container my-3">
-      <h1 id="admin_dashboard_main">ADMIN_DashBoard</h1>
+      <h1 id="admin_dashboard_main">DASHBOARD</h1>
       <div class="dashboard_kkk">
 
 
