--- a/src/main/resources/templates/khk/partnerListPage.html
+++ b/src/main/resources/templates/khk/partnerListPage.html
@@ -3,143 +3,143 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 
 <head>
-	<meta charset="utf-8">
-	<style>
-		body {
-			font-family: Arial, sans-serif;
-			background-color: #f5f5f5;
-			color: #333;
-		}
+<meta charset="utf-8">
+<style>
+body {
+	font-family: Arial, sans-serif;
+	background-color: #f5f5f5;
+	color: #333;
+}
 
-		h1 {
-			text-align: center;
-			margin: 20px 0;
-		}
+h1 {
+	text-align: center;
+	margin: 20px 0;
+}
 
-		h3 {
-			font-size: 1.17em;
-			margin-block-start: 1em;
-			margin-block-end: 1em;
-			margin-inline-start: 10px;
-			margin-inline-end: 0px;
-			font-weight: bold;
-		}
+h3 {
+	font-size: 1.17em;
+	margin-block-start: 1em;
+	margin-block-end: 1em;
+	margin-inline-start: 10px;
+	margin-inline-end: 0px;
+	font-weight: bold;
+}
 
-		.container {
-			margin: 10px auto;
-			width: 90%;
-			height: 100%;
-			margin-left: 110px
-		}
+.container {
+	margin: 10px auto;
+	width: 90%;
+	height: 100%;
+	margin-left: 110px
+}
 
-		table {
-			width: 100%;
-			border-collapse: collapse;
-		}
+table {
+	width: 100%;
+	border-collapse: collapse;
+}
 
-		th,
-		td {
-			padding: 8px;
-			text-align: left;
-			border-bottom: 1px solid #ddd;
-		}
+th, td {
+	padding: 8px;
+	text-align: left;
+	border-bottom: 1px solid #ddd;
+}
 
-		th {
-			background-color: #f2f2f2;
-			color: #333;
-		}
+th {
+	background-color: #f2f2f2;
+	color: #333;
+}
 
-		tr:nth-child(even) {
-			background-color: #f9f9f9;
-		}
+tr:nth-child(even) {
+	background-color: #f9f9f9;
+}
 
-		form {
-			display: inline-block;
-		}
+form {
+	display: inline-block;
+}
 
-		input[type="submit"] {
-			background-color: #4CAF50;
-			color: white;
-			border: none;
-			padding: 5px 10px;
-			cursor: pointer;
-		}
+input[type="submit"] {
+	background-color: #4CAF50;
+	color: white;
+	border: none;
+	padding: 5px 10px;
+	cursor: pointer;
+}
 
-		input[type="submit"]:hover {
-			background-color: #45a049;
-		}
+input[type="submit"]:hover {
+	background-color: #45a049;
+}
 
-		button {
-			border-radius: 5px;
-			border-style: none;
-		}
+button {
+	border-radius: 5px;
+	border-style: none;
+}
 
-		.approve_btn {
-			background-color: rgb(100, 177, 255);
-		}
+.approve_btn {
+	background-color: rgb(100, 177, 255);
+}
 
-		.approve_btn:hover {
-			background: #01939A;
-		}
+.approve_btn:hover {
+	background: #01939A;
+}
 
-		.reject_btn {
-			/* 	background-color: pink; */
-			border-style: none;
-		}
+.reject_btn {
+	/* 	background-color: pink; */
+	border-style: none;
+}
 
-		.approveCancel_btn {
-			background-color: rgb(192, 192, 192);
-			/* border-style: none;  */
-		}
+.approveCancel_btn {
+	background-color: rgb(192, 192, 192);
+	/* border-style: none;  */
+}
 
-		span.role-USER {
-			color: black;
-		}
+span.role-USER {
+	color: black;
+}
 
-		span.role-PARTNER {
-			color: blue;
-		}
+span.role-PARTNER {
+	color: blue;
+}
 
-		span.role-ADMIN {
-			color: red;
-		}
+span.role-ADMIN {
+	color: red;
+}
 
-		.account-status-disabled {
-			color: red;
-		}
+.account-status-disabled {
+	color: red;
+}
 
-		.pagination {
-			display: flex;
-			justify-content: center;
-			list-style: none;
-			padding: 0;
-			margin-top: 20px;
-		}
+.pagination {
+	display: flex;
+	justify-content: center;
+	list-style: none;
+	padding: 0;
+	margin-top: 20px;
+}
 
-		.page-item {
-			margin: 0 5px;
-		}
+.page-item {
+	margin: 0 5px;
+}
 
-		.page-link {
-			display: inline-block;
-			padding: 5px 10px;
-			border: 1px solid #ccc;
-			border-radius: 3px;
-			text-decoration: none;
-			color: #333;
-			background-color: #f2f2f2;
-		}
+.page-link {
+	display: inline-block;
+	padding: 5px 10px;
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	text-decoration: none;
+	color: #333;
+	background-color: #f2f2f2;
+}
 
-		.page-link:hover {
-			background-color: #e0e0e0;
-		}
-		.input-group{
-			position: absolute;
-			margin-right: -55px;
-			margin-top: 2px;
-		}
-	</style>
-	<script>
+.page-link:hover {
+	background-color: #e0e0e0;
+}
+
+.input-group {
+	position: absolute;
+	margin-right: -55px;
+	margin-top: 2px;
+}
+</style>
+<script>
 
 		function openPopup(imageUrl) {
 			window.open(imageUrl, "_blank", "width=800,height=800");
@@ -267,101 +267,120 @@
 </head>
 
 <body>
-	<html layout:decorate="~{khk/adminNavbar}">
-	<div layout:fragment="adminNav" class="container my-3">
-		<h1>파트너 신청 리스트</h1>
-		<div class="container">
+<html layout:decorate="~{khk/adminNavbar}">
+<div layout:fragment="adminNav" class="container my-3">
+	<h1>파트너 신청 리스트</h1>
+	<div class="container">
+		<div>
+			<div class="input-group">
+				<input type="text" id="search_kw" class="form-control"
+					placeholder="reg_username으로 찾기" th:value="${kw}">
+				<button class="btn btn-outline-secondary" type="button"
+					id="btn_search">검색</button>
+			</div>
+
+			<!-- 객체 개수 출력 -->
 			<div>
-				<div class="input-group">
-					<input type="text" id="search_kw" class="form-control" placeholder="reg_username으로 찾기"
-						th:value="${kw}">
-					<button class="btn btn-outline-secondary" type="button" id="btn_search">검색</button>
-				</div>
-
-				<div id="searchResults">
-					<table>
-						<thead>
-							<tr>
-								<th>회원 번호</th>
-								<th>신청자 아이디</th>
-								<th>업체명</th>
-								<th>담당자명</th>
-								<th>담당자 번호</th>
-								<th>첨부 파일</th>
-								<th>승인 여부</th>
-								<th></th>
-							</tr>
-						</thead>
-						<tbody id="partnerList">
-							<tr th:each="partner : ${paging}" th:data-user-id="${partner.id}">
-								<td th:text="${partner.id}"></td>
-								<td th:text="${partner.reg_username}"></td>
-								<td th:text="${partner.company_name}"></td>
-								<td th:text="${partner.partner_name}"></td>
-								<td th:text="${partner.partner_tel}"></td>
-								<td><a href="#" th:href="@{'/img/partner_regi_img/' + ${partner.filename}}"
-										onclick="openPopup(this.href); return false;" th:text="${partner.filename}"></a>
-								</td>
-
-								<td><span th:if="${partner.result_partner_reg == 0}" class="role-USER">심사 중</span> <span
-										th:if="${partner.result_partner_reg == 1}" class="role-PARTNER">승인
-										완료</span> <span th:if="${partner.result_partner_reg == 2}"
-										class="role-ADMIN">반려</span></td>
-								<td>
-									<form th:if="${partner.result_partner_reg == 0 || partner.result_partner_reg == 2}"
-										th:action="@{'/admin/approve/' + ${partner.id}}" method="post"
-										th:data-partner-id="${partner.id}"
-										onsubmit="event.preventDefault(); approve_btn(this.getAttribute('data-partner-id'), 1);">
-										<input type="hidden" name="status" value="1" />
-										<button type="submit" class="approve_btn"
-											data-partner-id="${partner.id}">승인</button>
-									</form>
-									<form th:if="${partner.result_partner_reg == 0 || partner.result_partner_reg == 2}"
-										th:action="@{'/admin/approve/' + ${partner.id}}" method="post"
-										th:data-partner-id="${partner.id}"
-										onsubmit="event.preventDefault(); reject_btn(this.getAttribute('data-partner-id'), 2);">
-										<input type="hidden" name="status" value="2" />
-										<button type="submit" class="reject_btn"
-											data-partner-id="${partner.id}">반려</button>
-									</form>
-									<form th:if="${partner.result_partner_reg == 1}"
-										th:action="@{'/admin/approve/' + ${partner.id}}" method="post"
-										th:data-partner-id="${partner.id}" name="rejectForm"
-										onsubmit="event.preventDefault(); approveCancel_btn(this.getAttribute('data-partner-id'), 0);">
-										<input type="hidden" name="status" value="0" />
-										<button type="submit" class="approveCancel_btn"
-											data-partner-id="${partner.id}">승인 취소</button>
-									</form>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
+				<p>전체 파트너 신청 수 : [[${objectCount}]] 개</p>
 			</div>
-			<!-- 페이징처리 시작 -->
-			<div th:if="${!paging.isEmpty()}">
-				<ul class="pagination justify-content-center">
-					<!-- 이전 페이지 버튼 -->
-					<li class="page-item" th:unless="${paging.first}"><a class="page-link" href="javascript:void(0)"
-							th:data-page="${paging.number-1}"> <span>이전</span>
-						</a></li>
-					<!-- 페이지 번호 -->
-					<li th:each="page: ${#numbers.sequence(0, paging.totalPages - 1)}"
-						th:classappend="${page == paging.number} ? 'active' : ''" class="page-item"><a
-							th:text="${page + 1}" class="page-link" th:href="@{|?page=${page}|}"></a></li>
-					<!-- 다음 페이지 버튼 -->
-					<li class="page-item" th:unless="${paging.last}"><a class="page-link" href="javascript:void(0)"
-							th:data-page="${paging.number+1}"> <span>다음</span>
-						</a></li>
-				</ul>
-				<!-- 페이징처리 끝 -->
-				<form th:action="@{/admin/partnerListPage}" method="get" id="searchForm">
-					<input type="hidden" id="kw" name="kw" th:value="${kw}"> <input type="hidden" id="page" name="page"
-						th:value="${paging.number}">
-				</form>
+			<!-- 페이지 번호 및 전체 페이지 수 출력 -->
+			<div>
+				<p>[[${paging.number + 1}]] Page of [[${paging.totalPages}]]
+					Page</p>
 			</div>
 
-			<script type="text/javascript">
+			<div id="searchResults">
+				<table>
+					<thead>
+						<tr>
+							<th>회원 번호</th>
+							<th>신청자 아이디</th>
+							<th>업체명</th>
+							<th>담당자명</th>
+							<th>담당자 번호</th>
+							<th>첨부 파일</th>
+							<th>승인 여부</th>
+							<th></th>
+						</tr>
+					</thead>
+					<tbody id="partnerList">
+						<tr th:each="partner : ${paging}" th:data-user-id="${partner.id}">
+							<td th:text="${partner.id}"></td>
+							<td th:text="${partner.reg_username}"></td>
+							<td th:text="${partner.company_name}"></td>
+							<td th:text="${partner.partner_name}"></td>
+							<td th:text="${partner.partner_tel}"></td>
+							<td><a href="#"
+								th:href="@{'/img/partner_regi_img/' + ${partner.filename}}"
+								onclick="openPopup(this.href); return false;"
+								th:text="${partner.filename}"></a></td>
+
+							<td><span th:if="${partner.result_partner_reg == 0}"
+								class="role-USER">심사 중</span> <span
+								th:if="${partner.result_partner_reg == 1}" class="role-PARTNER">승인
+									완료</span> <span th:if="${partner.result_partner_reg == 2}"
+								class="role-ADMIN">반려</span></td>
+							<td>
+								<form
+									th:if="${partner.result_partner_reg == 0 || partner.result_partner_reg == 2}"
+									th:action="@{'/admin/approve/' + ${partner.id}}" method="post"
+									th:data-partner-id="${partner.id}"
+									onsubmit="event.preventDefault(); approve_btn(this.getAttribute('data-partner-id'), 1);">
+									<input type="hidden" name="status" value="1" />
+									<button type="submit" class="approve_btn"
+										data-partner-id="${partner.id}">승인</button>
+								</form>
+								<form
+									th:if="${partner.result_partner_reg == 0 || partner.result_partner_reg == 2}"
+									th:action="@{'/admin/approve/' + ${partner.id}}" method="post"
+									th:data-partner-id="${partner.id}"
+									onsubmit="event.preventDefault(); reject_btn(this.getAttribute('data-partner-id'), 2);">
+									<input type="hidden" name="status" value="2" />
+									<button type="submit" class="reject_btn"
+										data-partner-id="${partner.id}">반려</button>
+								</form>
+								<form th:if="${partner.result_partner_reg == 1}"
+									th:action="@{'/admin/approve/' + ${partner.id}}" method="post"
+									th:data-partner-id="${partner.id}" name="rejectForm"
+									onsubmit="event.preventDefault(); approveCancel_btn(this.getAttribute('data-partner-id'), 0);">
+									<input type="hidden" name="status" value="0" />
+									<button type="submit" class="approveCancel_btn"
+										data-partner-id="${partner.id}">승인 취소</button>
+								</form>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+		<!-- 페이징처리 시작 -->
+		<div th:if="${!paging.isEmpty()}">
+			<ul class="pagination justify-content-center">
+				<!-- 이전 페이지 버튼 -->
+				<li class="page-item" th:unless="${paging.first}"><a
+					class="page-link" href="javascript:void(0)"
+					th:data-page="${paging.number-1}"> <span>이전</span>
+				</a></li>
+				<!-- 페이지 번호 -->
+				<li th:each="page: ${#numbers.sequence(0, paging.totalPages - 1)}"
+					th:classappend="${page == paging.number} ? 'active' : ''"
+					class="page-item"><a th:text="${page + 1}" class="page-link"
+					th:href="@{|?page=${page}|}"></a></li>
+				<!-- 다음 페이지 버튼 -->
+				<li class="page-item" th:unless="${paging.last}"><a
+					class="page-link" href="javascript:void(0)"
+					th:data-page="${paging.number+1}"> <span>다음</span>
+				</a></li>
+			</ul>
+			<!-- 페이징처리 끝 -->
+			<form th:action="@{/admin/partnerListPage}" method="get"
+				id="searchForm">
+				<input type="hidden" id="kw" name="kw" th:value="${kw}"> <input
+					type="hidden" id="page" name="page" th:value="${paging.number}">
+			</form>
+		</div>
+
+		<script type="text/javascript">
 
 				const page_elements = document.getElementsByClassName("page-link");
 				Array.from(page_elements).forEach(function (element) {
@@ -380,6 +399,5 @@
 
 
 			</script>
-</body>
-
+		</body>
 </html>
