--- a/src/main/resources/static/css/my_product_booklist.css
+++ b/src/main/resources/static/css/my_product_booklist.css
@@ -1,3 +1,15 @@
+
+#w-btn-indigo {
+	 padding: 15px 30px;
+    border-radius: 15px;
+    font-family: "paybooc-Light", sans-serif;
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+    font-weight: 600;
+    transition: 0.25s;
+    background-color: aliceblue;
+    color: #1e6b7b;
+}
 	.boss_sell_name{
 		margin-top: 20px;
 	}
@@ -7,7 +19,9 @@
 	#hidden_part_name{
 	display: none;
 	}
-	
+	.content-container{
+	margin-top:-30px;
+	}
 	#noMatchMessage{
 	margin-top:10px;
 	display: none;
