취소요청 완료

--- a/src/main/resources/templates/khk/adminNavbar.html
+++ b/src/main/resources/templates/khk/adminNavbar.html
@@ -356,6 +356,7 @@ select {
 			href="/admin/partnerListPage">파트너 신청</a> <a
 			href="/admin/inquiryList">1:1 문의</a> <a
 			href="/admin/decalarationList">신고 관리</a>
+			<a href="/admin/cancle_req">예약 취소 요청</a>
 	</div>
 	<th:block layout:fragment="adminNav"></th:block>
 </body>
