--- a/src/main/resources/templates/pyr/my_productlist.html
+++ b/src/main/resources/templates/pyr/my_productlist.html
@@ -82,7 +82,7 @@
 						</div>
 					</div>
 					<div id="pdMainEditArea">
-						<a th:href="@{|/product/registerRoom/${accommodation.id}|}">
+						<a th:href="@{|/partner/product/registerRoom/${accommodation.id}|}">
 							<button id="pdShowAddRoonBtn" type="button"
 								style="margin-bottom: 20px;">객실등록 / 조회</button>
 						</a>
