--- a/src/main/resources/templates/pyr/product_detail.html
+++ b/src/main/resources/templates/pyr/product_detail.html
@@ -97,11 +97,11 @@
 						<strong class="title" th:text="${product.product_type}"></strong>
 						<div class="hotel">
 							<div class="price">
-								<strong class="oneday_room">
-									1박 가격 </strong> <strong class="oneday_room2">-</strong>
-								<strong id="totalAmount"
+								<strong class="oneday_room"> 1박 가격 </strong> <strong
+									class="oneday_room2">-</strong> <strong id="totalAmount"
 									th:classappend="${product.product_count <= 0 ? 'gray-text' : ''}"
-									th:text="${product.product_amount}"></strong><strong id="totalAmount_won">원 </strong>
+									th:text="${product.product_amount}"></strong><strong
+									id="totalAmount_won">원 </strong>
 							</div>
 							<!-- <button type="button" onclick="pop_room_detail()">" 객실
                         이용 안내"</button> -->
@@ -134,7 +134,7 @@
 					<body>
 						<p class="mapbody"></p>
 						<span class="intro_load">찾아오시는 길</span>
-						<div id="map" ></div>
+						<div id="map"></div>
 						<script th:src="@{/js/kty_map.js}"></script>
 					</body>
 
@@ -157,40 +157,40 @@
 										th:text="${review.author.contains('name') ? 'Social_네이버회원' : (review.author.length() > 16 ? 'Social_구글회원' : 
                      (review.author.length()>9 && review.author.length() < 13 ? 'Social_카카오회원' : review.author))}"
 										class="contain_author"></span>
-									<div sec:authorize="isAuthenticated()">
+								<div sec:authorize="isAuthenticated()">
 
-                <button type="button" class="declaration"
+									<button type="button" class="declaration"
 										data-target="modal_declaration"
 										th:id="'declaration_button_' + ${review.id}"
 										th:attr="data-accomid=${review.id}"
 										th:data-review-id="${review.id}"
 										th:data-should-hide="${#lists.contains(review.declarations.![repoter], #authentication.name)}">신고</button>
-            </div>
-            <div th:each="dec : ${review.declarations}" class="dec_repoter_info">
-                <div th:text="${dec.repoter}"></div>
-            </div>
-            </p>
-            <p class="start_score">
-                <span th:if="${review.rating == 1}" class="start_repeat">★
-                                 ✩ ✩ ✩ ✩</span> <span th:if="${review.rating == 2}" class="start_repeat">★ ★ ✩ ✩ ✩</span> <span
-                                 th:if="${review.rating == 3}" class="start_repeat">★ ★ ★ ✩ ✩</span> 
-                                 <span th:if="${review.rating == 4}" class="start_repeat">★ ★ ★ ★ ✩</span> 
-                                 <span th:if="${review.rating == 5}"  class="start_repeat">
-                                 ★ ★ ★ ★ ★</span>
-                                 <span class="score_number" th:text="${review.rating}"> </span>
-            </p>
-            <!-- 신고 누락적시 블라인드 처리된 내용 표시 -->
-            <p class="blind1">
-                <span th:text="${review.contentForDisplay}"></span>
-            </p>
-            <p>
-                <span class="time_real"
+								</div>
+								<div th:each="dec : ${review.declarations}"
+									class="dec_repoter_info">
+									<div th:text="${dec.repoter}"></div>
+								</div>
+								</p>
+								<p class="start_score">
+									<span th:if="${review.rating == 1}" class="start_repeat">★
+										✩ ✩ ✩ ✩</span> <span th:if="${review.rating == 2}"
+										class="start_repeat">★ ★ ✩ ✩ ✩</span> <span
+										th:if="${review.rating == 3}" class="start_repeat">★ ★
+										★ ✩ ✩</span> <span th:if="${review.rating == 4}" class="start_repeat">★
+										★ ★ ★ ✩</span> <span th:if="${review.rating == 5}"
+										class="start_repeat"> ★ ★ ★ ★ ★</span> <span
+										class="score_number" th:text="${review.rating}"> </span>
+								</p> <!-- 신고 누락적시 블라인드 처리된 내용 표시 -->
+								<p class="blind1">
+									<span th:text="${review.contentForDisplay}"></span>
+								</p>
+								<p>
+									<span class="time_real"
 										th:text="${#temporals.format(review.create_reivew_Time, 'yyyy. MM. dd.  HH:mm')}"></span>
-            </p>
-            <br>
-        </li>
-    </ul>
-</div>
+								</p> <br>
+							</li>
+						</ul>
+					</div>
 					<!--  모달 (신고) -->
 					<div id="myModa" class="modal_declaration">
 						<div class="modal-content_declaration">
@@ -210,8 +210,7 @@
 								</select><br> <br>
 								<div class="decl_detail_con">상세 내용</div>
 								<br>
-								<textarea id="decl_detail"
-									placeholder="상세 사유를 작성하세요"></textarea>
+								<textarea id="decl_detail" placeholder="상세 사유를 작성하세요"></textarea>
 								<br> <input type="submit" value="제출" id="declr_btn">
 							</form>
 						</div>
